tests/NormalTests/paczka1/fuzzy1/63675553.err
Error in line 16: G7t A749 10,4
Error in line 2: tlFf45F4 A327 19,3
